# Merged-Repo

./: .gitignore  AGENTS.md  README.md  READ_THIS_FIRST.md  pyproject.toml  requirements-worm-migration.txt
Previous Conversations with GPT/: Samer New - Extraction Coverage Matrix.md  Samer Project X - Exact Cross-Family Analysis.md  Samer Project X - Performative Contradiction Collapse.md
docs/: BOUNDARY_TO_BIOLOGY_BOOTSTRAPPING_LADDER_v0.1.md  CEF_V0_1_V0_2_REAL_FORCING_UPGRADES.md  CEF_V0_3_WINDOW_DYNAMICS_ROBUSTNESS.md  CEF_V0_C_ELEGANS_FORCING_FUNCTION.md  EXTERNAL_REALITY_ADHESION_v0.1.md  HSM_V0_1_INDEPENDENT_CONSTRAINTS.md  HSM_V0_CAPITAL_MEMO.md  HSM_V0_CLAIM.md  HSM_V0_PROTOCOL.md  HSM_V0_SCOPE.md  SUBSTRATE_TO_NEURON_LADDER.md
exact_work/: authority_catalog.yaml
formal_handoff/: ARISTOTLE_TARGETS.md  FORMALIZATION_QUEUE.json  README.md  SAGE_Z3_TARGETS.md
formal_lean/: Formation.lean  README.md  lake-manifest.json  lakefile.toml
pg_pipeline/: __init__.py
positive_geometry_map/: __init__.py
projectx/: __init__.py
reports/: hsm_parent_chain_verification_v0_1.json  hsm_v0_1_verification.json  hsm_v0_summary.md  hsm_v0_verification.json
research_ledger/: COLD_START_CONTINUATION_PACKAGE.md  COMPARATOR_CHECK_RESULTS.json  COMPARATOR_CHECK_TARGETS.json  COMPARATOR_PACKAGE_REGISTER.md  CONTINUITY_ARCHITECTURE_STATE.json  CORPORATE_TECHNICAL_SPINE_DRAFT.md  CRBSM_REGIME_CANDIDATE_RECOVERY.md  EXTRACTION_LEDGER.md  FORMAL_CHECK_RESULTS.json  FORMAL_CHECK_TARGETS.json  FORMATION_MEDIUM_BULK_READOUT_WITNESS_SCHEMA.md  FORMATION_MEDIUM_CANDIDATE_VOCABULARY.md  FORMATION_MEDIUM_ENGINEERING_GATE_MATRIX_001.json  FORMATION_MEDIUM_ENGINEERING_TRIAGE_001.md  (+75 more)
(+1014 files in other folders)
