[project]
name = "projectx-merged"
version = "0.1.0"
description = "Merged ProjectX outer kernel with typed positive-geometry research pipeline"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "sympy>=1.13",
  "networkx>=3.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100

