[project]
name = "positive-geometry-map"
version = "0.0.1"
description = "Pipeline for computable positive-geometry family map"
requires-python = ">=3.10"
packages = ["positive_geometry_map"]
dependencies = [
  "sympy>=1.12",
  "numpy>=1.26",
  "networkx>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.3",
  "mypy>=1.10"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["positive_geometry_map"]
