[project]
name = "projectx-merged"
version = "0.1.0"
description = "Merged ProjectX outer kernel with typed positive-geometry research pipeline plus deterministic worm migration demo"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "sympy>=1.13",
  "networkx>=3.3",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "typer>=0.12",
  "blake3>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
visual = [
  "matplotlib>=3.8",
  "pygame>=2.5",
  "imageio>=2.34",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["projectx*", "pg_pipeline*", "wormsim*"]

